@@ -1,20 +1,19 @@
 package com.safetynetalerts.models;
 
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.*;
+
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
 
 @NoArgsConstructor
+@AllArgsConstructor
 @Getter
 @Setter
 @JsonIgnoreProperties
+@ToString
+@EqualsAndHashCode
 public class FireStation {
 	private Set<String> addresses;
 	private String stationNumber;
@@ -29,17 +28,8 @@ public class FireStation {
 		return this;
 	}
 
-	public String getStationNumber() {
-		return stationNumber;
-	}
-
 	public List<String> getAddresses() {
-		return addresses.stream().collect(Collectors.toList());
-	}
-
-	@Override
-	public String toString() {
-		return stationNumber.concat(": ") + String.join(", ", addresses);
+		return addresses.stream().toList();
 	}
 
 }
